FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 964 on 02 dec 2010

* Fixed person list (text format)
* Added general info report (ecel format)

Release 963 on 01 dec 2010

* modifications to family tree
* fix to restore of refn
* Show N N for person that has privacy set

Release 956 on 29 nov 2010

* Completed French version (using partially Google translator)
* Privacy on person to display as N N on report
* Date period gui fixed

Release 950 on 27 nov 2010

* fixed and added additional names to report index

Release 943 on 21 nov 2010

* removed add and delete notice button from noticepane, Added delete notice to toolbat

Release 941 on 18 nov 2010

* Fixed restore backup for state, village, farm and croft
* fixed backup for relation notice 2nd date part
* fixed restore for relation notice source
 
Release 938 on 17 nov 2010

* References in descendant report reworked

Release 936 on 15 nov 2010

* Image size info to Notice pane added
* Improvements to see also references for descendant report

Release 930 on 11 nov 2010

* sorting db window fix
* hiski import fixes

Release 925 on 10 nov 2010

* bugfixes to hiski haudatut and kastetut import
' fix of double names in database view

Release 922 on 8 nov 2010

* Added check to prevent update of identical consecutive names
  or occupations. Possibly an unresolved bug may create such
* Fixed bug with view manager  

Release 918 on 30 oct 2010

* Modified relatives lines in FamilyPanel
* Added email (@) from RESI tag to descendant lista
* Bugfixes

Release 913 on 21 oct 2010

* Multiple name editing serious bug fixed

Release 910 on 21 oct 2010

* Special handling added for Name types / and (
* Added list report for images

Release 903 on 19 oct 2010

* Gay marriages possibility added
* Bug fixes

Release 895 on 17 oct 2010
