@@ -2,6 +2,11 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 967 on 05 dec 2010
+
+* Formatted state and country display
+* changed privacy checkbox to drop down with 3 alternatives in mainperson
+
 Release 964 on 02 dec 2010
 
 * Fixed person list (text format)
